Create CMake file and format project

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 exec.lox
 UtilTest
-UtilTest.cpp
+source/UnitTest.cpp
+source/ASTPrinter.cpp
 Main
-.vscode/tasks.json
-.vscode/settings.json
 ast
 a.out
 lox
 cases
 test
-.vscode/launch.json
 builddebug
 log.txt
+.vscode/c_cpp_properties.json
+.vscode
+CMakeFiles
