headers moved in src folder and IDENTIFIER bug fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,20 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 
+if (NOT BUILD_MODE)
+  set(BUILD_MODE "EXEC")
+endif()
+
+message("BUILD_MODE ${BUILD_MODE}")
+
 project(CLocks
         LANGUAGES CXX)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/archive)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/archive)
         
-set(INCLUDE_PATH ${PROJECT_SOURCE_DIR})
 set(SOURCEPATH ${PROJECT_SOURCE_DIR}/source)
+set(INCLUDE_PATH ${SOURCEPATH})
 
 add_executable(ASTGen ${PROJECT_SOURCE_DIR}/toolset/ASTGEN.cpp)
 
@@ -26,7 +32,6 @@ add_custom_command(
 
 set(SOURCES 
     ${SOURCEPATH}/Clockswork.cpp
-    ${SOURCEPATH}/Main.cpp
     ${SOURCEPATH}/Token.cpp
     ${SOURCEPATH}/TokenLiteral.cpp
     ${SOURCEPATH}/Scanner.cpp
@@ -40,8 +45,18 @@ set(SOURCES
     ${SOURCEPATH}/LoxClass.cpp
     ${SOURCEPATH}/LoxInstance.cpp)
 
-add_executable(CLocks ${SOURCES})
+if (BUILD_MODE STREQUAL "LIB_SHARED")
+  set(LIB_TYPE SHARED)
+elseif (BUILD_MODE STREQUAL "LIB_STATIC")
+  set(LIB_TYPE STATIC)
+endif()
 
-target_include_directories(CLocks PUBLIC ${INCLUDE_PATH})
+if (BUILD_MODE STREQUAL "EXEC")
+  add_executable(${PROJECT_NAME} ${SOURCEPATH}/Main.cpp ${SOURCES})
+else()
+  add_library(${PROJECT_NAME} ${LIB_TYPE} ${SOURCES})
+endif()
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_PATH})
 
 
